--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   flutter:
     sdk: flutter
   autocomplete_textfield: ^1.6.4
+  charts_flutter: ^0.6.0
+  splashscreen: ^1.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
